--- a/dashboard-app-front/package.json
+++ b/dashboard-app-front/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-pdf": "^10.0.1",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0"
